--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_Key }} 
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }} 
       
       - name: Deploy 
         run: |
