--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy 
+name: Build
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main 
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
