--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Build
 
 on:
   push:
-    branches:
-      - main 
+    branches:[ main ] 
 
 jobs:
   build:
+  
     runs-on: ubuntu-latest
 
     steps:
